[gd_scene load_steps=2 format=3 uid="uid://event_panel_uid"]

[ext_resource type="Script" path="res://scripts/EventPanel.gd" id="1_script"]

[node name="EventPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 580.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "事件标题"
horizontal_alignment = 1

[node name="SpeakerLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
text = "说话者"

[node name="TextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 580.0
offset_bottom = 180.0
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "事件内容文本"
fit_content = true

[node name="DescriptionLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 190.0
offset_right = 580.0
offset_bottom = 210.0
visible = false
text = "描述"

[node name="ChoicesContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 220.0
offset_right = 580.0
offset_bottom = 380.0
theme_override_constants/separation = 10
